Fix #144: Fixed contrast issue with hovering over secondary buttons.

--- a/scss/trema/elements.scss
+++ b/scss/trema/elements.scss
@@ -252,6 +252,7 @@ body #page {
         box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.35);
         color: $black;
         &:hover {
+            color: $black;
             background-color: rgba(144, 144, 144, 0.075);
         }
     }
